# failure-build

./: Cargo.toml  INSTALL.md  README.md
.github/workflows/: failure-mcp-smoke.yml  release.yml
crates/codegen/xai-chat-state/src/: compaction_mode.rs  compaction_utils.rs
crates/codegen/xai-codebase-graph/src/: index_manager.rs
crates/codegen/xai-fast-worktree/src/: api.rs
crates/codegen/xai-file-utils/src/: queue.rs  workspace_classifier.rs
crates/codegen/xai-fsnotify/benches/: startup.rs
crates/codegen/xai-fsnotify/examples/: watch_stats.rs
crates/codegen/xai-fsnotify/src/: source.rs  watcher.rs
crates/codegen/xai-gix-status/src/: lib.rs
crates/codegen/xai-grok-agent/: README.md
crates/codegen/xai-grok-agent/src/: builder.rs  config.rs  discovery.rs  repo.rs
crates/codegen/xai-grok-agent/templates/: prompt.md
crates/codegen/xai-grok-announcements/src/: lib.rs
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-config-types/src/: lib.rs  mcp.rs  memory.rs
crates/codegen/xai-grok-config/src/: lib.rs  loader.rs  macos_managed.rs  managed_cache.rs  paths.rs  shell.rs  validation.rs
crates/codegen/xai-grok-env/src/: lib.rs
crates/codegen/xai-grok-hooks/examples/: README.md
crates/codegen/xai-grok-hooks/src/: config.rs  discovery.rs  env_expand.rs  lib.rs  test_support.rs  trust.rs
crates/codegen/xai-grok-hooks/tests/: integration.rs
crates/codegen/xai-grok-http/src/: lib.rs
crates/codegen/xai-grok-mcp/src/: credentials.rs  lib.rs  oauth.rs  servers.rs
crates/codegen/xai-grok-memory/src/: index.rs  lib.rs  storage.rs  watcher.rs
crates/codegen/xai-grok-mermaid/src/: lib.rs
crates/codegen/xai-grok-pager/: Cargo.toml  build.rs
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-pty-harness/src/: content.rs  flows.rs  leader.rs  lib.rs  pty.rs  scripted.rs
crates/codegen/xai-grok-pager-pty-harness/tests/: prompt_history_durable_quit.rs
crates/codegen/xai-grok-pager-render/src/: glyphs.rs  link_opener.rs  prompt_images.rs  syntax.rs  util.rs
crates/codegen/xai-grok-pager/docs/: custom-hooks.md  hooks-and-plugins.md
crates/codegen/xai-grok-pager/examples/: real_session_benchmark.rs
crates/codegen/xai-grok-pager/scripts/: install-enterprise.ps1  install-enterprise.sh  install.ps1  install.sh
crates/codegen/xai-grok-pager/src/: completions_cmd.rs  config_toml_edit.rs  diagnostics.rs  git_info.rs  headless.rs  input_log.rs  lib.rs  mcp_cmd.rs  memory_release.rs  memory_trace.rs  pty_wrap.rs  trace_cmd.rs  tracing.rs  wrap_clipboard_image.rs
crates/codegen/xai-grok-pager/tests/: grok_home_paths.rs  pty_auto_mode.rs  scripted_scenarios.rs  settings_e2e.rs
crates/codegen/xai-grok-plugin-marketplace/src/: catalog.rs  config.rs  git.rs  index.rs  installer.rs  scanner.rs
crates/codegen/xai-grok-sampler/src/: retry.rs  sampling_log.rs  shared_http.rs
crates/codegen/xai-grok-sampler/tests/: shared_http_kill_switch.rs  shared_http_wire.rs
crates/codegen/xai-grok-sampling-types/src/: conversation.rs  types.rs
crates/codegen/xai-grok-sandbox/: Cargo.toml
crates/codegen/xai-grok-sandbox/examples/: sandbox_smoke_test.rs
crates/codegen/xai-grok-sandbox/src/: lib.rs  logging.rs  paths.rs  profiles.rs
crates/codegen/xai-grok-sandbox/src/deny/: glob.rs  mod.rs
crates/codegen/xai-grok-sandbox/tests/: deny_paths_e2e.rs  integration_test.rs
crates/codegen/xai-grok-shared/: Cargo.toml
crates/codegen/xai-grok-shared/examples/: clipboard_probe.rs
crates/codegen/xai-grok-shared/src/: clipboard.rs  placeholder_images.rs  ui_config.rs
crates/codegen/xai-grok-shell/: README.md  build.rs
crates/codegen/xai-grok-shell-base/src/: env.rs
crates/codegen/xai-grok-shell/benches/: session_list.rs
crates/codegen/xai-grok-shell/src/: active_sessions.rs  builtin.rs  bundle.rs  claude_import.rs  claude_import_state.rs  cli_models.rs  cloudflare_worker.rs  lib.rs  managed_config.rs  mcp_doctor.rs  plugin.rs
crates/codegen/xai-grok-shell/tests/: git_contention_e2e.rs  session_load_perf.rs  team_managed_config.rs  test_agent_type_invariant.rs  test_built_binary_e2e.rs  test_config_update_isolation.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_global_extra_headers_e2e.rs  test_leader_death_repro.rs  test_leader_soak.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs
crates/codegen/xai-grok-subagent-resolution/src/: config.rs
crates/codegen/xai-grok-telemetry/: Cargo.toml
crates/codegen/xai-grok-telemetry/src/: client.rs  config.rs  debug_log.rs  enums.rs  hooks_log.rs  http.rs  id.rs  instrumentation.rs  memory_log.rs  sampling_log.rs
crates/codegen/xai-grok-telemetry/tests/: external_otlp.rs  external_otlp_gates_on.rs  external_otlp_grpc.rs  external_otlp_guard.rs  external_otlp_session_ctx.rs
crates/codegen/xai-grok-test-support/: README.md
crates/codegen/xai-grok-test-support/src/: acp_client.rs  env.rs  leader.rs  lib.rs  uds_proxy.rs
crates/codegen/xai-grok-tools/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/xai-grok-tools/src/: gitignore.rs  lib.rs  normalization.rs  tool_taxonomy.rs
crates/codegen/xai-grok-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/xai-grok-update/tests/: test_blitz_cancel.rs  test_check_status_regression.rs  test_concurrent_convergence.rs  test_downgrade_matrix.rs  test_install_internal.rs  test_install_sh.rs  test_io.rs
crates/codegen/xai-grok-version/: build.rs
crates/codegen/xai-grok-version/src/: lib.rs
crates/codegen/xai-grok-voice/: Cargo.toml
crates/codegen/xai-grok-voice/src/audio/: mod.rs
crates/codegen/xai-grok-workspace-client/src/: lib.rs
crates/codegen/xai-grok-workspace/src/: activity.rs  capability.rs  config.rs  daemonize.rs  discovery.rs  folder_trust.rs  fs_notify.rs  handle.rs  hub.rs  hub_auth.rs  (+6 more)
docs/: feed.xml
docs/media/: social-preview.html
(+450 files in other folders)
